rename table columnSettings -> be5columnSettings

--- a/modules/core/project.yaml
+++ b/modules/core/project.yaml
@@ -19,7 +19,7 @@ core:
   - be5querySettings
   - categories
   - classifications
-  - columnSettings
+  - be5columnSettings
   - countries
   - entities
   - languages
