add PersistentTokenRepositoryImpl, move logic in RememberMeServicesImpl, - from spring security

--- a/modules/core/src/meta/entities/persistent_logins.yaml
+++ b/modules/core/src/meta/entities/persistent_logins.yaml
@@ -1,23 +1,19 @@
-be5querySettings:
+persistent_logins:
   type: collection
-  displayName: Query settings
+  displayName: Persistent logins
   primaryKey: ID
   scheme:
     columns:
-    - ID:
-        type: KEYTYPE
-        autoIncrement: true
+    - series:
+        type: VARCHAR(64)
         primaryKey: true
-    - table_name:
-        type: VARCHAR(30)
-    - query_name:
-        type: VARCHAR(255)
     - user_name:
         type: VARCHAR(100)
         reference: users
-    - recordsPerPage:
-        type: INT
-        canBeNull: true
+    - token:
+        type: VARCHAR(64)
+    - last_used:
+        type: DATETIME
   queries:
   - All records:
       type: 1D
@@ -28,13 +24,13 @@ be5querySettings:
       - Filter
       - Insert
       code: |-
-          SELECT
-            ID AS "___ID",
-            table_name AS "table_name",
-            query_name AS "query_name",
-            user_name AS "user_name",
-            recordsPerPage AS "recordsPerPage"
-          FROM be5querySettings
+        SELECT
+          ID AS "___ID",
+          user_name AS "user_name",
+          series AS "series",
+          token AS "token",
+          last_used AS "last_used"
+        FROM persistent_logins
   operations:
   - Insert:
       roles: Administrator
