--- a/modules/monitoring/pom.xml
+++ b/modules/monitoring/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>be5</artifactId>
+    <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
     <version>0.0.3-SNAPSHOT</version>
   </parent>
