--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>be5-web</artifactId>
 
   <parent>
-    <artifactId>be5</artifactId>
+    <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
     <version>0.0.3-SNAPSHOT</version>
   </parent>
