SystemSettingsEdit - fixes for entity without primary key

--- a/modules/core/src/meta/entities/systemSettings.yaml
+++ b/modules/core/src/meta/entities/systemSettings.yaml
@@ -27,7 +27,7 @@ systemSettings:
       - Edit
       code: |-
         SELECT
-          CONCAT(section_name, "|", setting_name)
+          CONCAT(section_name, '|', setting_name) AS "___ID",
           section_name,
           setting_name,
           setting_value
