--- a/query/src/test/resources/src/meta/entities/testtable.yaml
+++ b/query/src/test/resources/src/meta/entities/testtable.yaml
@@ -81,6 +81,13 @@ testtable:
           t.value AS "Value",
           '<css class="currency"/>;<format mask="###,###,##0.00" />' AS ";Value"
         FROM testtable t
+  - safeXml:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      code: |-
+        SELECT
+          t.name AS "Name;<safexml/>"
+        FROM testtable t
   - beGrouping:
       type: 1D_unknown
       roles: SystemDeveloper
