--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - oraclejdk8
+  - openjdk8
 before_install:
   - git clone https://github.com/DevelopmentOnTheEdge/beanexplorer.git
     && cd beanexplorer
