fix relativePath, revert mvn test-compile in travis

--- a/util/test-base/pom.xml
+++ b/util/test-base/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
     <version>0.0.3-SNAPSHOT</version>
+    <relativePath>../../</relativePath>
   </parent>
 
   <dependencies>
