--- a/util/jetty/pom.xml
+++ b/util/jetty/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
     <version>0.0.3-SNAPSHOT</version>
+    <relativePath>../../</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <name>be5 jetty</name>
   <artifactId>be5-jetty</artifactId>
