fix: SQLException for dictionary l10n

--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -6,6 +6,7 @@ queryTestProject:
   application:
   - classifications
   - testData
+  - testDictionary
   - testtable
   - testtableAdmin
   - testSubQuery
