Logout for all roles, including Guest

--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -82,5 +82,5 @@ users:
       roles: '@AllRolesExceptGuest'
       code: com.developmentontheedge.be5.modules.core.operations.users.ChangePassword
   - Logout:
-      roles: '@AllRolesExceptGuest'
+      roles: '@AllRoles'
       code: com.developmentontheedge.be5.modules.core.operations.users.Logout
