--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -77,7 +77,7 @@ _system_:
   - Events:
       type: static
       extras: feature:eventDbLogging
-      roles: [SystemDeveloper, Administrator]
+      roles: [SystemDeveloper]
       value: be5events.redir?_qn_=All+records
   operations:
   - ExecuteInOperation:
