+ "placeholder" for column

--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -13,6 +13,7 @@ testTags:
     - admlevel:
         type: ENUM('Federal','Municipal','Regional')
         defaultValue: '''Regional'''
+        placeholder: '''Level of smth'''
     - referenceTest:
         type: VARCHAR(2)
         canBeNull: true
