--- a/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -14,6 +14,7 @@ testtableAdmin:
     - value:
         type: INT
         canBeNull: true
+        defaultValue: 111
   queries:
   - '*** Selection view ***':
       type: 1D
