--- a/database/pom.xml
+++ b/database/pom.xml
@@ -64,11 +64,11 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+    <!--dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>42.2.11</version>
-    </dependency>
+    </dependency-->
 
   </dependencies>
 </project>
