--- a/database/pom.xml
+++ b/database/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>[4.12,)</version>
       <scope>test</scope>
     </dependency>
 
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.4.193</version>
+      <version>[1.4.193,)</version>
       <scope>test</scope>
     </dependency>
 
