--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -67,14 +67,14 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.4.193</version>
+      <version>[1.4.193,)</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>[4.12,)</version>
       <scope>test</scope>
     </dependency>
 
