--- a/util/test-base/pom.xml
+++ b/util/test-base/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.4.193</version>
+      <version>[1.4.193,)</version>
     </dependency>
 
     <dependency>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>[4.12,)</version>
     </dependency>
 
     <dependency>
