--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -300,9 +300,20 @@
               </sources>
             </configuration>
           </execution>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${project.build.directory}/generated-sources/java/</source>
+              </sources>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
-      <plugin>
+      <!--plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>3.0.0</version>
@@ -319,7 +330,7 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
+      </plugin-->
 
     </plugins>
 
