--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
+        <!--version>[2.22.0,)</version-->
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
