--- a/base/pom.xml
+++ b/base/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>21.0</version>
+      <version>[24.1.1,)</version>
     </dependency>
 
     <dependency>
