--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -81,7 +81,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>21.0</version>
+      <version>[24.1.1,)</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
