--- a/util/jetty/pom.xml
+++ b/util/jetty/pom.xml
@@ -16,7 +16,8 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
-    <jetty.version>9.4.44.v20210927</jetty.version>
+    <jetty.version>9.3.30.v20211001</jetty.version>
+    <!--jetty.version>9.4.44.v20210927</jetty.version-->
     <!--<jetty.version>[9.3,9.5)</jetty.version>-->
     <!--<jetty.version>9.3.30.v20211001 </jetty.version>-->
     <!--<jetty.version>[8.1,9.4)</jetty.version>-->
