Column rename from 'value' to 'valueCol' for  H2

--- a/base/src/test/resources/src/meta/entities/testtable.yaml
+++ b/base/src/test/resources/src/meta/entities/testtable.yaml
@@ -11,5 +11,5 @@ testtable:
         primaryKey: true
     - name:
         type: VARCHAR(20)
-    - value:
+    - valueCol:
         type: VARCHAR(30)
