--- a/database-model/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/database-model/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -11,6 +11,6 @@ testtableAdmin:
         primaryKey: true
     - name:
         type: VARCHAR(30)
-    - value:
+    - valueCol:
         type: INT
         canBeNull: true
