--- a/query/src/test/resources/src/meta/entities/public.filterTestTable2.yaml
+++ b/query/src/test/resources/src/meta/entities/public.filterTestTable2.yaml
@@ -11,7 +11,7 @@ public.filterTestTable2:
         primaryKey: true
     - name:
         type: VARCHAR(20)
-    - value:
+    - valueCol:
         type: INT
         canBeNull: true
   queries:
