--- a/server/src/test/resources/src/meta/entities/attachments.yaml
+++ b/server/src/test/resources/src/meta/entities/attachments.yaml
@@ -17,6 +17,6 @@ attachments:
     - data:
         type: TEXT
         canBeNull: true
-    - value:
+    - valueCol:
         type: VARCHAR(30)
         canBeNull: true
