--- a/modules/core/src/test/resources/src/meta/entities/testtable.yaml
+++ b/modules/core/src/test/resources/src/meta/entities/testtable.yaml
@@ -11,7 +11,7 @@ testtable:
         primaryKey: true
     - name:
         type: VARCHAR(20)
-    - value:
+    - valueCol:
         type: VARCHAR(30)
   queries:
   - All records:
