--- a/query/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/query/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -11,7 +11,7 @@ testtableAdmin:
         primaryKey: true
     - name:
         type: VARCHAR(30)
-    - value:
+    - valueCol:
         type: INT
         canBeNull: true
   queries:
@@ -23,7 +23,7 @@ testtableAdmin:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
   - Query without operations:
@@ -32,7 +32,7 @@ testtableAdmin:
       code: |-
         SELECT
           t.name AS "Name",
-          t.value AS "Value"
+          t.valueCol AS "Value"
         FROM
           testtable t
   - Test 1D unknown:
@@ -42,7 +42,7 @@ testtableAdmin:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
   - Test null in subQuery:
@@ -52,10 +52,10 @@ testtableAdmin:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value",
+              t.valueCol AS "Value",
               '<sql>SELECT name
                     FROM testtableAdmin t
-                    WHERE t.value = <var:Value />
+                    WHERE t.valueCol = <var:Value />
                </sql>' AS "NameFromSubQuery"
             FROM
               testtableAdmin t
