--- a/server/pom.xml
+++ b/server/pom.xml
@@ -88,7 +88,7 @@
           <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>[1.4.193,)</version>
+            <version>1.4.193</version>
           </dependency>
         </dependencies>
       </plugin>
