--- a/server/src/test/resources/src/meta/entities/atest.yaml
+++ b/server/src/test/resources/src/meta/entities/atest.yaml
@@ -11,7 +11,7 @@ atest:
         primaryKey: true
     - name:
         type: VARCHAR(20)
-    - value:
+    - valueCol:
         type: VARCHAR(30)
   queries:
   - Test2DefaultView:
@@ -27,7 +27,7 @@ atest:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
   - Test2:
@@ -37,6 +37,6 @@ atest:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
