--- a/server/src/test/resources/src/meta/entities/meters.yaml
+++ b/server/src/test/resources/src/meta/entities/meters.yaml
@@ -11,7 +11,7 @@ meters:
     - name:
         type: VARCHAR(50)
         defaultValue: '''Н/Д'''
-    - value:
+    - valueCol:
         type: SMALLINT
     - whoInserted___:
         type: VARCHAR(100)
