--- a/server/src/test/resources/src/meta/entities/testtUser.yaml
+++ b/server/src/test/resources/src/meta/entities/testtUser.yaml
@@ -11,7 +11,7 @@ testtUser:
         primaryKey: true
     - name:
         type: VARCHAR(20)
-    - value:
+    - valueCol:
         type: VARCHAR(30)
   queries:
   - testtUser:
@@ -21,6 +21,6 @@ testtUser:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
