--- a/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -11,7 +11,7 @@ testtableAdmin:
         primaryKey: true
     - name:
         type: VARCHAR(30)
-    - value:
+    - valueCol:
         type: INT
         canBeNull: true
         defaultValue: 111
@@ -45,7 +45,7 @@ testtableAdmin:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtableAdmin t
   - Query without operations:
@@ -54,7 +54,7 @@ testtableAdmin:
       code: |-
         SELECT
           t.name AS "Name",
-          t.value AS "Value"
+          t.valueCol AS "Value"
         FROM
           testtable t
   - Test 1D unknown:
@@ -64,7 +64,7 @@ testtableAdmin:
             SELECT
               t.ID AS "___ID",
               t.name AS "Name",
-              t.value AS "Value"
+              t.valueCol AS "Value"
             FROM
               testtable t
   - AllowedRecords:
