--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -88,7 +88,7 @@ testTags:
       code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
   - 'Alt Insert':
       roles: Administrator
-      code: com.developmentontheedge.be5.server.operations.SilentInsertOperationAlt
+      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
   - OperationWithCanBeNull:
       type: Groovy
       roles: Administrator
