--- a/util/jetty/pom.xml
+++ b/util/jetty/pom.xml
@@ -17,6 +17,8 @@
 
   <properties>
     <jetty.version>9.3.30.v20211001</jetty.version>
+    <!--jetty.version>9.4.48.v20220622</jetty.version-->
+
     <!--jetty.version>9.4.44.v20210927</jetty.version-->
     <!--<jetty.version>[9.3,9.5)</jetty.version>-->
     <!--<jetty.version>9.3.30.v20211001 </jetty.version>-->
