--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -188,8 +188,13 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.3.v20170317</version>
+        <!--version>9.4.3.v20170317</version-->
+        <version>9.4.48.v20220622</version>
+
         <configuration>
+          <supportedPackagings>
+             <supportedPackaging>jar</supportedPackaging>
+          </supportedPackagings>
           <scanIntervalSeconds>0</scanIntervalSeconds>
           <webAppConfig implementation="org.eclipse.jetty.webapp.WebAppContext">
             <sessionHandler implementation="org.eclipse.jetty.server.session.SessionHandler">
