remove tomcat tales, first version to generate documenttion

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -72,6 +72,19 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-maven-plugin</artifactId>
+      <version>0.1.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
