further work on automated generation of documentation

--- a/maven/src/test/resources/project/project.yaml
+++ b/maven/src/test/resources/project/project.yaml
@@ -3,7 +3,9 @@ mavenTestProject:
   l10n: []
   projectFileStructure: {}
   modules: []
-  application: entity
+  application: 
+  - comments
+  - entities
   scripts:
   - Post-db
   - data
