generate table relationships for docs

--- a/maven/src/test/resources/doc/source/.be5.yaml
+++ b/maven/src/test/resources/doc/source/.be5.yaml
@@ -1,9 +1,8 @@
 diagrams:
-  - diagram1:
-    tables: [comments, entities]
-table_includes:
-  - entities
-  - comments
+  - diagram_1:
+      tables: [comments, entities]
+  - diagram_2:
+      tables: [comments]
 
 
   
