--- a/database/pom.xml
+++ b/database/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>commons-dbutils</groupId>
       <artifactId>commons-dbutils</artifactId>
-      <version>1.7</version>
+      <version>[1.7,)</version>
     </dependency>
 
     <dependency>
