--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,13 @@
       <uniqueVersion>false</uniqueVersion>
       <id>dote</id>
       <name>DOTE Repository</name>
-      <url>http://nexus.dote.ru/nexus/content/repositories/releases/</url>
+      <url>https://nexus.dote.ru/nexus/content/repositories/releases/</url>
     </repository>
     <snapshotRepository>
       <uniqueVersion>true</uniqueVersion>
       <id>dote-snapshots</id>
       <name>DOTE Snapshots</name>
-      <url>http://nexus.dote.ru/nexus/content/repositories/snapshots/</url>
+      <url>https://nexus.dote.ru/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
