Groovy version upgrade

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -52,8 +52,8 @@
 
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <version>2.4.10</version>
+      <artifactId>groovy-yaml</artifactId>
+      <version>[3.0.0,)</version>
     </dependency>
 
     <dependency>
