--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -189,7 +189,8 @@
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <!--version>9.4.3.v20170317</version-->
-        <version>9.4.48.v20220622</version>
+        <!--version>9.4.48.v20220622</version-->
+        <version>9.4.53.v20231009</version>
 
         <configuration>
           <supportedPackagings>
