--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -156,7 +156,7 @@
           <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>[2.1.210,)</version>
+            <version>2.2.224</version>
           </dependency>
           <!--dependency>
             <groupId>org.postgresql</groupId>
