--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>beans</artifactId>
-      <version>3.0.4-SNAPSHOT</version>
+      <version>3.0.4</version>
     </dependency>
 
     <dependency>
