--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,29 @@
   <packaging>pom</packaging>
 
   <name>Be5 project</name>
-  <url>https://github.com/DevelopmentOnTheEdge/be5/wiki</url>
+  <url>https://github.com/DevelopmentOnTheEdge/be5</url>
+  <description>BeanExplorer v5 (aka be5) backend</description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <organization>Development On The Edge</organization>
+            <organizationUrl>https://github.com/DevelopmentOnTheEdge</organizationUrl>
+        </developer>
+    </developers>
+
+  <scm>
+      <connection>scm:git:git://github.com/DevelopmentOnTheEdge/be5.git</connection>
+      <developerConnection>scm:git:ssh://github.com/DevelopmentOnTheEdge/be5.git</developerConnection>
+      <url>https://github.com/DevelopmentOnTheEdge/be5</url>
+  </scm>
+
 
   <modules>
     <module>database</module>
